   report by Ralph Seichter)

- #10135: Overhaul the FlexDLL bootstrap process. A separate non-shared version
  of the runtime is built, and shared artefacts are no longer built twice. The
  flexdll target no longer has to be separately built, but is folded into the
  default make target. flexlink.opt is now built automatically with opt.opt. If
  the flexdll code is present, any flexlink in PATH is ignored.
  (David Allsopp, review by Sébastien Hinderer)

- #10156: configure script: fix sockets feature detection.
  (Lucas Pluvinage, review by David Allsopp and Damien Doligez)

- #10176: By default, call the assembler through the C compiler driver
  (Sébastien Hinderer, review by Gabriel Scherer, David Allsopp and Xavier
  Leroy)

- #10186: configure wasn't using library link flags when searching for
  network functions on systems where they're not in libc. Fix IPv6 and
  socklen_t detection on Windows.
  (Antonin Décimo, review by David Allsopp and Sébastien Hinderer)

- #10332, #10333: Generate lambda/runtimedef.ml correctly in Swedish locale.
  (the letter 'w' is not included in '[a-z]' in sv_SE.UTF-8)
  (David Allsopp, report by Anders Jackson, review by Florian Angeletti and
   Gabriel Scherer)

- #10366: Make it possible to use the OCAMLRUN variable to specify
  which runtime to use while building the compilers (Sébastien Hinderer,
  review by David Allsopp)

### Bug fixes:

- #6985, #10385: remove all ghost row types from included modules
  (Florian Angeletti, review by Gabriel Scherer)

* #8857, #10220: Don't clobber GetLastError() in caml_leave_blocking_section
  when the systhreads library is loaded.
  (David Allsopp, report by Anton Bachin, review by Xavier Leroy)

- #8575, #10362: Surprising interaction between polymorphic variants and
  constructor disambiguation.
  (Jacques Garrigue, report and review by Thomas Refis)

- #8917, #8929, #9889, #10219: fix printing of nested recursive definitions
  in presence of a name collision.